Fixed issue with Destination section not fitting correctly

--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,7 @@ img {
 @media (max-width: 500px) {
   .btn {
     text-align: center;
+    width: 100%;
   }
 }
 .footer {
@@ -214,7 +215,6 @@ img {
   background: #FFEBCD;
 }
 .footer p {
-  text-align: center;
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
@@ -322,6 +322,7 @@ img {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
 }
 @media (max-width: 500px) {
@@ -332,8 +333,6 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
-  padding-left: 10%;
-  padding-right: 10%;
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
