--- a/less/home-page.less
+++ b/less/home-page.less
@@ -113,6 +113,7 @@
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
 
     @media @mobile {
@@ -122,8 +123,6 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
-      padding-left: 10%;
-      padding-right: 10%;
 
       @media @mobile {
         width: 100%;
