--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,5 +33,6 @@
 
     @media @mobile {
         text-align: center;
+        width: 100%;
     }
 }
